--- a/options.html
+++ b/options.html
@@ -16,6 +16,8 @@
     <br>
     <textarea rows="4" cols="50" id="ue"></textarea>
     <br>
+    <label>The minimum file size you want: </label><input type="number" id="minsize" step=any min=0></input>
+    <br>
     <button type="submit">Save</button>
   </form>
   <script src="options.js"></script>
