--- a/options.html
+++ b/options.html
@@ -3,29 +3,37 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
 
 <body>
-  <form>
-    <label>Wanted Extension</label>
-    <br>
-    <textarea rows="4" cols="50" id="we"></textarea>
-    <br>
-    <label>Unwanted Extension</label>
-    <br>
-    <textarea rows="4" cols="50" id="ue"></textarea>
-    <br>
-    <label>Only download the file larger than (MB): </label><input type="number" id="minsize" step=any min=1></input>
-    <br>
-    Default Download Manager:<select id="dm">
-      <option value="Thunder">Thunder</option>
-      <option value="EagleGet">EagleGet</option>
-    </select>
-    <br>
-    <button type="submit">Save</button>    
-  </form>
-  <script src="options.js"></script>
+    <form>
+        <label id="version"></label>
+        <br>
+        <label>Wanted Extension</label>
+        <br>
+        <textarea rows="4" cols="50" id="we"></textarea>
+        <br>
+        <label>Unwanted Extension</label>
+        <br>
+        <textarea rows="4" cols="50" id="ue"></textarea>
+        <br>
+        <label>Only download files larger than (MB): </label>
+        <input type="number" id="minsize" step=any min=1></input>
+        <br> Default Download Manager:
+        <select id="dm">
+            <option value="Thunder">Thunder</option>
+            <option value="EagleGet">EagleGet</option>
+        </select>
+        <br>
+        <button type="submit">Save</button>
+    </form>
+    <form>
+        <button type="button" id="button_check">Check Downloaders</button>
+        <br>
+        <label id="check_result"></label>
+    </form>
+    <script src="options.js"></script>
 </body>
 
 </html>
