fix baidu disk download.

--- a/options.html
+++ b/options.html
@@ -26,6 +26,8 @@
             <option value="EagleGet">EagleGet</option>
         </select>
         <br>
+        <input type="checkbox" id="autoDownClose"> Auto Close Tab after Download<br>
+        <input type="checkbox" id="autoCancelClose"> Auto Close Tab after Cancel<br>
         <button type="submit">Save</button>
     </form>
     <form>
