support show in center

--- a/options.html
+++ b/options.html
@@ -38,6 +38,8 @@
         <br>
         <input type="checkbox" id="autoClose"><label i18n-text="Auto_close"></label>
         <br>
+        <input type="checkbox" id="showCenter"><label i18n-text="Show_In_Center"></label>
+        <br>
         <button type="submit" i18n-text="Save"></button>
     </form>
     <form>
