support download in filrefox directly

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
 
 <body>
     <form>
-        <p><label id="version"></label></p>
+        <p><label id="version">Checking Version...</label></p>
         <p>
         <label i18n-text="Wanted_Extension"></label>
         <br>
@@ -39,6 +39,8 @@
         <input type="checkbox" id="autoClose"><label i18n-text="Auto_close"></label>
         <br>
         <input type="checkbox" id="showCenter"><label i18n-text="Show_In_Center"></label>
+        <br>
+        <input type="checkbox" id="replaceAsk"><label i18n-title="Replace_hint" i18n-text="Replace_default_with_direct_download"></label>
         <br>
         <button type="submit" i18n-text="Save"></button>
     </form>
