support basic operation for rulesets

--- a/options.html
+++ b/options.html
@@ -43,6 +43,10 @@
         <input type="checkbox" id="replaceAsk"><label i18n-title="Replace_hint" i18n-text="Replace_default_with_direct_download"></label>
         <br>
         <button type="submit" i18n-text="Save"></button>
+        <br>
+        <p>
+        <a id="advRuleConfig" href="rules.html">Advanced download ruleset configuration</a>
+        </p>
     </form>
     <form>
         <button type="button" id="button_check" i18n-text="Check_DM"></button>
