--- a/options.html
+++ b/options.html
@@ -40,7 +40,7 @@
         <br>
         <input type="checkbox" id="showCenter"><label i18n-text="Show_In_Center"></label>
         <br>
-        <input type="checkbox" id="replaceAsk"><label i18n-title="Replace_hint" i18n-text="Replace_default_with_direct_download"></label>
+        <input type="checkbox" id="replaceAsk"><abbr i18n-title="Replace_hint" i18n-text="Replace_default_with_direct_download"></abbr>
         <br>
         <button type="submit" i18n-text="Save"></button>
         <br>
