--- a/options.html
+++ b/options.html
@@ -49,6 +49,8 @@
         </p>
     </form>
     <form>
+        <button type="button" id="button_restoreDefault" i18n-text="Restore_Default_Settings"></button>
+        <br>
         <button type="button" id="button_check" i18n-text="Check_DM"></button>
         <br>
         <label><pre id="check_result"></pre></label>
