options ui update

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
 
 <body>
     <form>
-        <p><label id="version">Checking Version...</label></p>
+        <p><label id="version" i18n-text="Checking_Version"></label></p>
         <p>
         <label i18n-text="Wanted_Extension"></label>
         <br>
@@ -45,7 +45,7 @@
         <button type="submit" i18n-text="Save"></button>
         <br>
         <p>
-        <a id="advRuleConfig" href="rules.html">Advanced download ruleset configuration</a>
+        <a id="advRuleConfig" href="rules.html" i18n-text="Advanced_Download_Ruleset_Configuration"></a>
         </p>
     </form>
     <form>
