new: fix thunderagent new: icon? mod: localize rules.html

--- a/rules.html
+++ b/rules.html
@@ -13,12 +13,13 @@
 <body>
     <table id="ruleset">
         <tr>
-            <td>Accept or Deny</td>
-            <td>Extension</td>
-            <td>MIME-type</td>
-            <td>Host</td>
-            <td>Operation</td>
+            <td i18n-text="Accept_or_Deny"></td>
+            <td i18n-text="Extension"></td>
+            <td i18n-text="MIME_type"></td>
+            <td i18n-text="Host"></td>
+            <td i18n-text="Operation"></td>
         </tr>
     </table>
     <script src="rules.js"></script>
+    <script src="localization.js"></script>
 </body>
