show extension version in options.html

--- a/options.html
+++ b/options.html
@@ -9,6 +9,7 @@
 <body>
     <form>
         <p><label id="version" i18n-text="Checking_Version"></label></p>
+        <p><label id="extVersion"></label></p>
         <p>
         <label i18n-text="Wanted_Extension"></label>
         <br>
