update thunder methods

--- a/options.html
+++ b/options.html
@@ -31,6 +31,7 @@
             <option value="Customized" i18n-text="Customized"></option>
         </select>
         <br>
+        <abbr i18n-text="Entry_name"></abbr><input type="text" id="entryName" disabled>
         <br>
         <abbr i18n-title="Executable_file_tooltip" i18n-text="Executable_file"></abbr><input type="text" id="exeFile" disabled>
         <br>
