--- a/html/rules.html
+++ b/html/rules.html
@@ -3,12 +3,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <style>
-        table, td {
-            border: 1px solid black;
-        }
-    </style>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="/css/rules.css"/>
 </head>
 <body>
     <table id="ruleset">
@@ -20,6 +16,6 @@
             <td i18n-text="Operation"></td>
         </tr>
     </table>
-    <script src="rules.js"></script>
-    <script src="localization.js"></script>
+    <script src="/js/rules.js"></script>
+    <script src="/js/localization.js"></script>
 </body>
